# lib/api-spec/openapi.yaml
@@ -280,6 +280,8 @@ components:
           type: ["string", "null"]
         hasListen:
           type: boolean
+        published:
+          type: boolean
         sortOrder:
           type: integer
         createdAt:
@@ -294,6 +296,7 @@ components:
         - description
         - imagePath
         - hasListen
+        - published
         - sortOrder
         - createdAt
         - updatedAt
@@ -312,6 +315,8 @@ components:
         imagePath:
           type: ["string", "null"]
         hasListen:
+          type: boolean
+        published:
           type: boolean
         sortOrder:
           type: integer
@@ -336,6 +341,8 @@ components:
           type: ["string", "null"]
         hasListen:
           type: boolean
+        published:
+          type: boolean
         sortOrder:
           type: integer
 
@@ -352,6 +359,8 @@ components:
           type: array
           items:
             type: string
+        published:
+          type: boolean
         sortOrder:
           type: integer
         createdAt:
@@ -363,6 +372,7 @@ components:
         - title
         - content
         - tags
+        - published
         - sortOrder
         - createdAt
         - updatedAt
@@ -378,6 +388,8 @@ components:
           type: array
           items:
             type: string
+        published:
+          type: boolean
         sortOrder:
           type: integer
       required:
@@ -394,6 +406,8 @@ components:
           type: array
           items:
             type: string
+        published:
+          type: boolean
         sortOrder:
           type: integer
 
@@ -406,6 +420,8 @@ components:
           type: string
         caption:
           type: string
+        published:
+          type: boolean
         sortOrder:
           type: integer
         createdAt:
@@ -416,6 +432,7 @@ components:
         - id
         - src
         - caption
+        - published
         - sortOrder
         - createdAt
         - updatedAt
@@ -427,6 +444,8 @@ components:
           type: string
         caption:
           type: string
+        published:
+          type: boolean
         sortOrder:
           type: integer
       required:
@@ -440,5 +459,7 @@ components:
           type: string
         caption:
           type: string
+        published:
+          type: boolean
         sortOrder:
           type: integer
